@@ -1,37 +1,41 @@
 #!/bin/bash
 
-# run.sh
+get_latest_version() {
+    local module_name=$1
+    find ~/.m2/repository/org/openjfx -name "${module_name}-*.jar" | grep -vE "javadoc|sources" | sort -Vr | head -n1
+}
 
-# Change the working directory to where the script is located
-cd "$(dirname "$0")"
+FX_BASE_PATH=$(get_latest_version "javafx-base")
+FX_CONTROLS_PATH=$(get_latest_version "javafx-controls")
+FX_FXML_PATH=$(get_latest_version "javafx-fxml")
+FX_GRAPHICS_PATH=$(get_latest_version "javafx-graphics")
 
-# Set MAVEN_OPTS environment variable
-export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED"
+FX_PATH="${FX_BASE_PATH}:${FX_CONTROLS_PATH}:${FX_FXML_PATH}:${FX_GRAPHICS_PATH}"
+
+if [[ -z "$FX_PATH" ]]; then
+    echo "No es pot trobar el mòdul JavaFX al repositori Maven local."
+    exit 1
+fi
+
+# Opcions comunes per a MAVEN_OPTS
+export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --module-path $FX_PATH --add-modules javafx.controls,javafx.fxml,javafx.graphics"
+
+# Opcions específiques per a Darwin
+if [[ "$OSTYPE" == "darwin"* ]]; then
+    export MAVEN_OPTS="$MAVEN_OPTS -Xdock:icon=./target/classes/icons/iconOSX.png"
+fi
+
+# Resta de l'script
 
 # Check for the first argument and set it as the main class
-mainClass="$1"
+mainClass=$1
 
 echo "Setting MAVEN_OPTS to: $MAVEN_OPTS"
 echo "Main Class: $mainClass"
 
-# Remove the first argument (mainClass) so the rest can be passed to Maven
-shift
-
-# Construct Maven argument for the main class
-mavenMainClassArg="-Dexec.mainClass=$mainClass"
-
-# Use "$@" to properly handle all arguments intended for the Java program
-javaArgs="$@"
-
-# Join the arguments into a single string with proper escaping
-javaArgsStr=$(printf "%q " "$javaArgs")
-
-# Construct argument for passing additional args to Java program
-execArgsForJava="-Dexec.args=\"$javaArgsStr\""
-
-echo "Maven Main Class Argument: $mavenMainClassArg"
-echo "Java Program Arguments: $javaArgsStr"
+# Execute mvn command with the profile and main class as arguments
+execArg="-PrunMain -Dexec.mainClass=$mainClass"
+echo "Exec args: $execArg"
 
 # Execute mvn command
-mvn clean clean compile test
-mvn exec:java $mavenMainClassArg $execArgsForJava
+mvn clean test-compile exec:java $execArg
